--- a/website/download/index.html
+++ b/website/download/index.html
@@ -21,13 +21,16 @@
     <div class="retry-button leading-none text-center mx-auto mb-4 font-md">
       <!-- Hide all the possible channels, so we can later show the one we want. -->
       <div id="esr" class="download-hidden">
-      {{ download_thunderbird(force_direct=true, alt_copy=_('Try again'), flex_class='justify-center', button_class='btn-newsletter no-underline', hide_footer_links=True) }}
+        <h4 class="channel-title">{{ _('Release Channel') }}</h4>
+        {{ download_thunderbird(force_direct=true, alt_copy=_('Try again'), flex_class='justify-center', button_class='btn-newsletter no-underline', hide_footer_links=True) }}
       </div>
       <div id="beta" class="download-hidden">
-      {{ download_thunderbird(force_direct=true, alt_copy=_('Try again'), channel='beta', flex_class='justify-center', button_class='btn-newsletter no-underline', hide_footer_links=True) }}
+        <h4 class="channel-title">{{ _('Beta Channel') }}</h4>
+        {{ download_thunderbird(force_direct=true, alt_copy=_('Try again'), channel='beta', flex_class='justify-center', button_class='btn-newsletter no-underline', hide_footer_links=True) }}
       </div>
       <div id="daily" class="download-hidden">
-      {{ download_thunderbird(force_direct=true, alt_copy=_('Try again'), channel='daily', flex_class='justify-center', button_class='btn-newsletter no-underline', hide_footer_links=True) }}
+        <h4 class="channel-title">{{ _('Daily Channel') }}</h4>
+        {{ download_thunderbird(force_direct=true, alt_copy=_('Try again'), channel='daily', flex_class='justify-center', button_class='btn-newsletter no-underline', hide_footer_links=True) }}
       </div>
     </div>
   </div>
