--- a/start-page/beta/index.html
+++ b/start-page/beta/index.html
@@ -17,7 +17,7 @@
 
           <div class="donate">
             {{ _('Support us!') }}
-            {{ '<a href="%(donate)s" class="donate-btn" data-donate-btn data-donate-redirect="donate" data-donate-content="paragraph_text" data-donate-source="start_page_tb_beta">'|format(donate=donate_url('paragraph_text', 'start_page_tb_beta')) }}
+            {{ '<a href="%(donate)s" class="donate-btn" data-donate-btn data-donate-redirect="donate" data-donate-content="paragraph_text" data-donate-source="start_page_tb_beta">'|format(donate=redirect_donate_url(content='paragraph_text', source='start_page_tb_beta', location='thunderbird.donate', make_full_url=True, show_donation_modal=False)) }}
               {{ svg('donate-btn-heart') }}
               {{ _('Donate') }}
             </a>
