New daily start page (Fixes #410)
- Matches the newer Release and Beta design
- Adjusted colouring to be more in-line with Daily's logo
- Streamlined sections to be more support/bug focused
- Warning includes a link to our Daily Forum so they will hopefully actually join it

--- a/start-page/beta/index.html
+++ b/start-page/beta/index.html
@@ -48,7 +48,7 @@
             </ul>
           </div>
         </div>
-        <p class="beta-thanks">{{ _('Thank you for using Thunderbird Beta. Your experiences with beta are important, so please report rough edges, bugs, and provide feedback in the ways suggested below - to help make the next Thunderbird release as awesome as possible.')}}</p>
+        <p class="main-thanks">{{ _('Thank you for using Thunderbird Beta. Your experiences with beta are important, so please report rough edges, bugs, and provide feedback in the ways suggested below - to help make the next Thunderbird release as awesome as possible.')}}</p>
       </header>
 
       <div class="main-content">
