Replace references of the old Lightning Calendar to just Calendar, and correct some links so they point to the right place. (Fixes #418)

--- a/website/about/index.html
+++ b/website/about/index.html
@@ -34,7 +34,7 @@
       </aside>
 
       <aside class="hidden lg:flex flex-1 max-w-xl -mr-20">
-        {{ platform_img('thunderbird/calendar/screenshot.png', {'alt': _('Lightning Calendar screenshot'), 'high-res': True, 'l10n': True, 'platforms': ('windows', 'linux', 'mac')}) }}
+        {{ platform_img('thunderbird/calendar/screenshot.png', {'alt': _('Calendar screenshot'), 'high-res': True, 'l10n': True, 'platforms': ('windows', 'linux', 'mac')}) }}
       </aside>
     </section>
   </section>
