--- a/website/calendar/holidays/index.html
+++ b/website/calendar/holidays/index.html
@@ -21,12 +21,12 @@
         <aside class="flex flex-col">
           {{ _('Holiday Calendars')}}
           <small class="font-normal font-md tracking-normal normal-case">
-            {{ _('Add your nation’s holidays to Lightning!') }}
+            {{ _('Add your nation’s holidays to Calendar!') }}
           </small>
         </aside>
       </h3>
       <p class="font-lg tracking-wider leading-loose mb-6 p-links-blue">
-        {{ _('We’ve got some holiday calendar files available for download. You can either download and then import them into Lightning or you can just subscribe to these calendars by copying their URL and then adding them as new remote calendar files. More information on installing a holiday calendar can be found in the <a href="%s">Adding a holiday calendar article</a>.')|format('https://support.mozilla.org/kb/adding-a-holiday-calendar') }}
+        {{ _('We’ve got some holiday calendar files available for download. You can either download and then import them into Calendar or you can just subscribe to these calendars by copying their URL and then adding them as new remote calendar files. More information on installing a holiday calendar can be found in the <a href="%s">Adding a holiday calendar article</a>.')|format('https://support.mozilla.org/kb/adding-a-holiday-calendar') }}
       </p>
       <p class="font-lg tracking-wider leading-loose mb-10 mt-0 p-links-blue">
         {{ _('You can also find calendars to subscribe to at <a href="%s">iCalShare.com</a>.')|format('http://icalshare.com') }}
