Adjusted beta appeal copy (Fixes #433)

--- a/website/thunderbird/102.0/beta-appeal/index.html
+++ b/website/thunderbird/102.0/beta-appeal/index.html
@@ -28,7 +28,7 @@
         </p>
 
         <p class="font-lg md:font-xl tracking-wide leading-relaxed max-w-4xl mb-12 mt-0 p-links mx-auto">
-          {{ _('Thunderbird Beta is early access software, so please report the rough edges using the Help menu.  You can “Share Ideas and Feedback” and get assistance via “Get Help” or the <a href="%(beta_topicbox_url)s">Beta Topicbox</a> forum.')|format(beta_topicbox_url='https://thunderbird.topicbox.com/groups/beta') }}
+          {{ _('Thunderbird Beta is early access software, so please report the rough edges using the Help menu. You can find assistance via “Get Help” and “Share Ideas and Feedback” as well as the <a href="%(beta_topicbox_url)s">Beta Topicbox</a> forum.')|format(beta_topicbox_url='https://thunderbird.topicbox.com/groups/beta') }}
         </p>
 
         <div class="flex flex-col items-center mx-auto max-w-xl p-4 text-black-light no-underline font-xl">
