Fixed a missing quote on the beta appeal copy.

--- a/website/thunderbird/102.0/beta-appeal/index.html
+++ b/website/thunderbird/102.0/beta-appeal/index.html
@@ -77,7 +77,7 @@
       </a>
       <div class="blog-body h-4">
         <div class="thumbnail"><img src="https://blog.thunderbird.net/files/2023/02/future-of-thunderbird-1-768x432.png" alt="Article Featured Image"/></div>
-        <p>{{ _('Why does Thunderbird look so old, and why does it take so long to change?" Let\'s answer that burning question with some important history, and a look into the future.') }}</p>
+        <p>{{ _('"Why does Thunderbird look so old, and why does it take so long to change?" Let\'s answer that burning question with some important history, and a look into the future.') }}</p>
       </div>
       <footer class="flex justify-between items-center pt-4 border-grey-light border-solid border-0 border-t uppercase text-blue-dark font-bold tracking-tight">
         <span>{{ _('February 9, 2023') }}</span>
