whats new refinements

--- a/website/thunderbird/115.0/whatsnew/index.html
+++ b/website/thunderbird/115.0/whatsnew/index.html
@@ -17,9 +17,10 @@
         {{_('What’s New in
         <br>
         <span class="tb-title">Thunderbird</span>
-        <span class="version">115</span>')}}
+        <span class="version">115</span>
+        <span class="sr-only">Supernova</span>')}}
       </h1>
-      <img class="supernova" src="/media/img/thunderbird/whatsnew/115/supernova.png" alt="">
+      <img class="supernova" src="/media/img/thunderbird/whatsnew/115/supernova.png" alt="{{_('Supernova wordmark')}}">
     </div>
   </header>
 {% endblock %}
@@ -37,7 +38,7 @@
     <figcaption>115 | 102</figcaption>
   </section>
 
-  <div class="nebula"><img src="/media/img/thunderbird/backgrounds/nebula.png" alt=""></div>
+  <div class="nebula"><img src="/media/img/thunderbird/backgrounds/nebula.png" alt="{{_('A nebula of stars')}}"></div>
 
   <section class="whats-new-section">
     <div class="container utb">
@@ -53,12 +54,12 @@
         </p>
       </div>
       <div class="image">
-        <img src="/media/img/thunderbird/whatsnew/115/utb.png" alt="">
+        <img src="/media/img/thunderbird/whatsnew/115/utb.png" alt="{{_('The all new Unified Toolbar')}}">
       </div>
     </div>
   </section>
 
-  <div class="nebula"><img src="/media/img/thunderbird/backgrounds/nebula.png" alt=""></div>
+  <div class="nebula"><img src="/media/img/thunderbird/backgrounds/nebula.png" alt="{{_('A nebula of stars')}}"></div>
 
   <section class="whats-new-section">
     <div class="container split reverse iconography">
@@ -73,12 +74,12 @@
         </p>
       </div>
       <div class="image">
-        <img src="/media/img/thunderbird/whatsnew/115/iconography.png" alt="">
+        <img src="/media/img/thunderbird/whatsnew/115/iconography.png" alt="{{_('The improved icons')}}">
       </div>
     </div>
   </section>
 
-  <div class="nebula"><img src="/media/img/thunderbird/backgrounds/nebula.png" alt=""></div>
+  <div class="nebula"><img src="/media/img/thunderbird/backgrounds/nebula.png" alt="{{_('A nebula of stars')}}"></div>
 
   <section class="whats-new-section">
     <div class="container density">
@@ -96,23 +97,23 @@
         <div class="density-window">
           <div class="button-group">
             <button class="button icon-only">{{ svg('supernova-density-compact') }}</button>
-            <button class="button icon-only">{{ svg('supernova-density-default') }}</button>
+            <button class="button icon-only selected">{{ svg('supernova-density-default') }}</button>
             <button class="button icon-only">{{ svg('supernova-density-relaxed') }}</button>
           </div>
-          <img class="hidden" src="/media/img/thunderbird/whatsnew/115/density-compact.png" alt="">
-          <img src="/media/img/thunderbird/whatsnew/115/density-default.png" alt="">
-          <img class="hidden" src="/media/img/thunderbird/whatsnew/115/density-relaxed.png" alt="">
+          <img class="hidden" src="/media/img/thunderbird/whatsnew/115/density-compact.png" alt="{{_('Compact density icon')}}">
+          <img src="/media/img/thunderbird/whatsnew/115/density-default.png" alt="{{_('Default density icon')}}">
+          <img class="hidden" src="/media/img/thunderbird/whatsnew/115/density-relaxed.png" alt="{{_('Relaxed density icon')}}">
         </div>
         <div class="density-cards">
-          <img src="/media/img/thunderbird/whatsnew/115/appmenu-relaxed.png" alt="">
-          <img src="/media/img/thunderbird/whatsnew/115/appmenu-default.png" alt="">
-          <img src="/media/img/thunderbird/whatsnew/115/appmenu-compact.png" alt="">
+          <img src="/media/img/thunderbird/whatsnew/115/appmenu-relaxed.png" alt="{{_('An example of the relaxed density')}}">
+          <img src="/media/img/thunderbird/whatsnew/115/appmenu-default.png" alt="{{_('An example of the relaxed density')}}">
+          <img src="/media/img/thunderbird/whatsnew/115/appmenu-compact.png" alt="{{_('An example of the relaxed density')}}">
         </div>
       </div>
     </div>
   </section>
 
-  <div class="nebula"><img src="/media/img/thunderbird/backgrounds/nebula.png" alt=""></div>
+  <div class="nebula"><img src="/media/img/thunderbird/backgrounds/nebula.png" alt="{{_('A nebula of stars')}}"></div>
 
   <section class="whats-new-section">
     <div class="container split reverse appmenu">
@@ -128,12 +129,12 @@
         </p>
       </div>
       <div class="image">
-        <img src="/media/img/thunderbird/whatsnew/115/appmenu.png" alt="">
+        <img src="/media/img/thunderbird/whatsnew/115/appmenu.png" alt="{{_('The new AppMenu')}}">
       </div>
     </div>
   </section>
 
-  <div class="nebula"><img src="/media/img/thunderbird/backgrounds/nebula.png" alt=""></div>
+  <div class="nebula"><img src="/media/img/thunderbird/backgrounds/nebula.png" alt="{{_('A nebula of stars')}}"></div>
 
   <section class="whats-new-section">
     <div class="container split">
@@ -163,12 +164,12 @@
       </div>
 
       <div class="image">
-        <img src="/media/img/thunderbird/whatsnew/115/folderpane.png" alt="">
+        <img src="/media/img/thunderbird/whatsnew/115/folderpane.png" alt="{{_('The improved folder pane')}}">
       </div>
     </div>
   </section>
 
-  <div class="nebula"><img src="/media/img/thunderbird/backgrounds/nebula.png" alt=""></div>
+  <div class="nebula"><img src="/media/img/thunderbird/backgrounds/nebula.png" alt="{{_('A nebula of stars')}}"></div>
 
   <section class="whats-new-section">
     <div class="container split reverse cardsview">
@@ -184,16 +185,16 @@
         </p>
       </div>
       <div class="image">
-        <img src="/media/img/thunderbird/whatsnew/115/msg-1.png" alt="">
-        <img src="/media/img/thunderbird/whatsnew/115/msg-2.png" alt="">
-        <img src="/media/img/thunderbird/whatsnew/115/msg-3.png" alt="">
-        <img src="/media/img/thunderbird/whatsnew/115/msg-4.png" alt="">
-        <img src="/media/img/thunderbird/whatsnew/115/msg-5.png" alt="">
+        <img src="/media/img/thunderbird/whatsnew/115/msg-1.png" alt="{{_('An example of a message in card view')}}">
+        <img src="/media/img/thunderbird/whatsnew/115/msg-2.png" alt="{{_('An example of a message in card view')}}">
+        <img src="/media/img/thunderbird/whatsnew/115/msg-3.png" alt="{{_('An example of a message in card view')}}">
+        <img src="/media/img/thunderbird/whatsnew/115/msg-4.png" alt="{{_('An example of a message in card view')}}">
+        <img src="/media/img/thunderbird/whatsnew/115/msg-5.png" alt="{{_('An example of a message in card view')}}">
       </div>
     </div>
   </section>
 
-  <div class="nebula"><img src="/media/img/thunderbird/backgrounds/nebula.png" alt=""></div>
+  <div class="nebula"><img src="/media/img/thunderbird/backgrounds/nebula.png" alt="{{_('A nebula of stars')}}"></div>
 
   <section class="whats-new-section">
     <div class="container split reverse ab">
@@ -208,12 +209,12 @@
         </p>
       </div>
       <div class="image">
-        <img src="/media/img/thunderbird/whatsnew/115/ab.png" alt="">
+        <img src="/media/img/thunderbird/whatsnew/115/ab.png" alt="{{_('The improved address book edit pane')}}">
       </div>
     </div>
   </section>
 
-  <div class="nebula"><img src="/media/img/thunderbird/backgrounds/nebula.png" alt=""></div>
+  <div class="nebula"><img src="/media/img/thunderbird/backgrounds/nebula.png" alt="{{_('A nebula of stars')}}"></div>
 
   <section class="whats-new-section">
     <div class="container accessability">
@@ -247,7 +248,7 @@
     </div>
   </section>
 
-  <div class="nebula"><img src="/media/img/thunderbird/backgrounds/nebula.png" alt=""></div>
+  <div class="nebula"><img src="/media/img/thunderbird/backgrounds/nebula.png" alt="{{_('A nebula of stars')}}"></div>
 
   <section class="whats-new-section">
     <div class="container calendar">
@@ -262,12 +263,12 @@
         </p>
       </div>
       <div class="image">
-        <img src="/media/img/thunderbird/whatsnew/115/cal.png" alt="">
+        <img src="/media/img/thunderbird/whatsnew/115/cal.png" alt="{{_('The improved calendar')}}">
       </div>
     </div>
   </section>
 
-  <div class="nebula"><img src="/media/img/thunderbird/backgrounds/nebula.png" alt=""></div>
+  <div class="nebula"><img src="/media/img/thunderbird/backgrounds/nebula.png" alt="{{_('A nebula of stars')}}"></div>
 
   <section class="whats-new-section">
     <div class="container info more">
@@ -285,5 +286,15 @@
     slider.addEventListener("input", (e) => {
       root.style.setProperty("--slider", `${e.target.value}%`);
     });
+    slider.addEventListener("mouseup", (e) => {
+      // Unfocus slider when trying to scroll down for people navigating with mouse
+      document.activeElement.blur();
+    })
+    slider.addEventListener("keydown", (e) => {
+      // Unfocus slider when trying to scroll down for people navigating with keybord
+      if (e.keyCode == '38' || e.keyCode == '40') {
+        document.activeElement.blur();
+      }
+    })
   </script>
 {% endblock %}
