refine appeal while we're here

--- a/website/thunderbird/115.0/appeal/index.html
+++ b/website/thunderbird/115.0/appeal/index.html
@@ -19,7 +19,7 @@
  {% block site_header %}
 <header id="initAppeal" >
   <div class="container">
-    <img class="logo" src="/media/img/thunderbird/appeal/115/Thunderbird_Logo.png" alt="Thunderbird logo">
+    <img class="logo" src="/media/img/thunderbird/appeal/115/Thunderbird_Logo.png" alt="{{_('Thunderbird logo')}}">
     <h1>
       {{ _('Help Keep
       <br>
