--- a/website/index.html
+++ b/website/index.html
@@ -114,7 +114,7 @@ with great features!') }}{% endblock %}
         </div>
       </div>
       <div class="cta">
-        <a href="#" class="cta-ln">{{_('See Compatibility')}}</a>
+        <!-- <a href="#" class="cta-ln">{{_('See Compatibility')}}</a> -->
       </div>
     </div>
     <div class="mask">
@@ -131,8 +131,8 @@ with great features!') }}{% endblock %}
           {% trans %}
           Thunderbird is funded by user donations. We don’t collect personal data, sell ads in your inbox, or secretly
           train AI
-          with your private conversations. Thunderbird is <a href="">open source</a>. As part of the <a
-            href="#">Mozilla</a> family you can be confident we
+          with your private conversations. Thunderbird is <a href="https://en.wikipedia.org/wiki/Open-source_software">open source</a>. As part of the <a
+            href="https://mozilla.org">Mozilla</a> family you can be confident we
           always put your privacy and security first.
           {% endtrans %}
         </p>
