--- a/website/index.html
+++ b/website/index.html
@@ -166,7 +166,7 @@ with great features!') }}{% endblock %}
     <div class="container">
       <div class="section-text">
         <h2>{{_('<span class="txt-gradient">Freedom</span> to Geek Out')}}</h2>
-            <h3>{{_('thunderbird is yours.')}}</h3>
+            <h3>{{_('Thunderbird is yours.')}}</h3>
             <p>
               {% trans %}
               Thunderbird is clean and elegant by default, but easily customizable to match your workflow and visual
@@ -312,7 +312,7 @@ with great features!') }}{% endblock %}
                   <img src="/media/img/thunderbird/new/testimonials/testimonial-portrait-dom.jpg" alt="{{_('profile image')}}">
                 </picture>
               </div>
-              <div class="name">DOM</div>
+              <div class="name">Dom</div>
               <div class="title">{{_('Student, UK')}}</div>
             </div>
           </div>
