--- a/website/thunderbird/115.0/whatsnew/index.html
+++ b/website/thunderbird/115.0/whatsnew/index.html
@@ -221,7 +221,7 @@
       <div class="info">
         <div class="header">
           <span class="icon">{{ svg('supernova-handshake') }}</span>
-          <h3>{{_('Expanded Accessability')}}</h3>
+          <h3>{{_('Expanded Accessibility')}}</h3>
         </div>
         <p>
           {{_('Supernova substantially improves Thunderbird’s keyboard navigation and screen reader accessibility across the
