--- a/website/index.html
+++ b/website/index.html
@@ -35,7 +35,9 @@ with great features!') }}{% endblock %}
             {{ svg('download-icon-apple') }}
           </span>
         </div>
-        <!-- TODO: Download Button -->
+        <div>
+        {{ download_thunderbird(force_direct=true, alt_copy=_('Free Download')) }}
+        </div>
         <small>{{_('Free forever.')}} <a href="{{ donate_url('header') }}">{{_('Donate')}}</a> {{_('to make it better.')}}</small>
       </div>
     </div>
