Hide section links for now
Hide these links until we visually can update the rest of the site.

--- a/website/index.html
+++ b/website/index.html
@@ -156,7 +156,7 @@ with great features!') }}{% endblock %}
         </div>
       </div>
       <div class="cta">
-        <a href="{{ url('thunderbird.about') }}" class="cta-ln">{{_('Discover Our Mission')}}</a>
+        <!-- <a href="{{ url('thunderbird.about') }}" class="cta-ln">{{_('Discover Our Mission')}}</a> -->
       </div>
     </div>
     <div class="mask">
@@ -329,7 +329,7 @@ with great features!') }}{% endblock %}
       </div>
 
       <div class="cta">
-        <a href="{{ url('thunderbird.features') }}" class="cta-ln">{{_('Explore More Features')}}</a>
+        <!-- <a href="{{ url('thunderbird.features') }}" class="cta-ln">{{_('Explore More Features')}}</a> -->
       </div>
     </div>
     <div class="mask">
