Add product metadata back to home page. (Fixes #471)

--- a/website/index.html
+++ b/website/index.html
@@ -425,5 +425,8 @@ with great features!') }}{% endblock %}
     </div>
   </section>
 
+  {% with page_desc = self.page_desc() %}
+    {% include "includes/product-metadata.html" %}
+  {% endwith %}
 {% endblock %}
 
