--- a/start-page/_base-resp.html
+++ b/start-page/_base-resp.html
@@ -10,11 +10,8 @@
     <title>{% filter striptags|e %}{% block title %}{% endblock %}{% endfilter %}</title>
     {{ l10n_css() }}
     <link href="/media/css/start-style.css" rel="stylesheet" type="text/css" />
-    <!-- Fontawesome added below -->
-    <link href="/media/css/fontawesome-all.css" rel="stylesheet">
-    <!--<script defer src="/media/js/fontawesome-all.js"></script>-->
   </head>
-  <body class="sky">
+  <body class="start-bg">
     <main>
       {% block main %}{% endblock %}
     </main>
