--- a/start-page/release/index.html
+++ b/start-page/release/index.html
@@ -2,7 +2,7 @@
  # License, v. 2.0. If a copy of the MPL was not distributed with this
  # file, You can obtain one at http://mozilla.org/MPL/2.0/. -#}
 
-{% extends "_new-base-resp.html" %}
+{% extends "_base-resp.html" %}
 
 {% block channel %}release{% endblock %}
 {% block title %}{{ _('Welcome to <div class="tb-text">Thunderbird</div>') }}{% endblock %}
