--- a/website/get-involved/index.html
+++ b/website/get-involved/index.html
@@ -329,7 +329,7 @@
           </h3>
           <ul class="font-md tracking-wider leading-loose mb-6 p-links-blue">
             <li>
-             {{ _('For localization of Thunderbird itself, see <a href="https://source-docs.thunderbird.net/en/latest/l10n/index.html">Thunderbird Localization</a> in the source docs.') }}
+             {{ _('For localization of Thunderbird itself, see <a href="https://source-docs.thunderbird.net/en/latest/l10n/index.html">Thunderbird Localization</a> in the source docs. Most languages <a href="https://pontoon.mozilla.org/projects/thunderbird/">use Pontoon</a>.') }}
             </li>
             <li>
               {{ _('You can also contribute translations for this <a href="https://pontoon.mozilla.org/projects/thunderbirdnet/">website on Pontoon</a>.') }}
