Small styling pass for the EOY appeal 2023:  - Trim the devices image by about 50 pixels to centre it  - Make the donate button work function  - Add initial button states for hover and active.

--- a/website/thunderbird/115.0/eoy/index.html
+++ b/website/thunderbird/115.0/eoy/index.html
@@ -30,10 +30,12 @@
       <p class="content">{{ _('Did you know that <strong>less than 1%</strong> of Thunderbird users fund all the work we do? We don’t show advertisements or sell your data, and we are completely funded by donations from our community.') }}</p>
       </div>
       <div class="donate-button-group">
-        <button class="btn-donate-appeal">
-          <span class="heart"></span><span class="text">{{ _('Donate') }}</span>
-        </button>
-        <div class="glow"></div>
+        <span class="action-box">
+          <a href="#support" class="btn-donate-appeal">
+            <span class="heart"></span><span class="text">{{ _('Donate') }}</span>
+          </a>
+          <div class="glow"></div>
+        </span>
       </div>
     </div>
   </div>
