Apply some special TLC for tux and apple icon classes. (Fixes #525)

--- a/website/index.html
+++ b/website/index.html
@@ -28,10 +28,10 @@ with great features!') }}{% endblock %}
           <span class="icon">
             {{ svg('download-icon-windows') }}
           </span>
-          <span class="icon">
+          <span class="icon icon-tux-alt">
             {{ svg('download-icon-linux') }}
           </span>
-          <span class="icon">
+          <span class="icon icon-apple">
             {{ svg('download-icon-apple') }}
           </span>
         </div>
@@ -351,7 +351,7 @@ with great features!') }}{% endblock %}
           <span class="icon">
             {{ svg('download-icon-linux') }}
           </span>
-          <span class="icon">
+          <span class="icon icon-apple">
             {{ svg('download-icon-apple') }}
           </span>
         </div>
