Add utm tag for eoy appeal donation link

--- a/website/thunderbird/115.0/eoy/index.html
+++ b/website/thunderbird/115.0/eoy/index.html
@@ -31,7 +31,7 @@
       </div>
       <div class="donate-button-group">
         <span class="action-box">
-          <a href="#support" class="btn-donate-appeal">
+          <a href="{{ donate_url(content='cta', campaign='eoy_appeal_2023', source='thunderbird-client') }}" class="btn-donate-appeal">
             <span class="heart"></span><span class="text">{{ _('Donate') }}</span>
           </a>
           <div class="glow"></div>
