Adjust the `high_res_img` helper to allow for variable scale, and alternative image formats.
Apply image optimizations for the eoy 2023 donation appeal.

Simplify alt_formats check on high_res_img.

--- a/website/thunderbird/115.0/eoy/index.html
+++ b/website/thunderbird/115.0/eoy/index.html
@@ -60,7 +60,7 @@
     <p>{{ _('<strong>We can’t do this without you!</strong> If you get value from using Thunderbird, please consider giving a donation to support this goal.') }}</p>
   </div>
   <div class="body-devices">
-    <img src="/media/img/thunderbird/eoy/115.0/devices@2x.png" alt="{{ _('An illustration of Thunderbird on a phone, a desktop, and a tablet.') }}"/>
+    {{ high_res_img('thunderbird/eoy/115.0/devices.png', optional_attributes={'alt': _('An illustration of Thunderbird on a phone, a desktop, and a tablet.') }, scale='2x', alt_formats=('avif', 'webp')) }}
   </div>
   <div class="body-footer">
     <div class="footer-line first"></div>
