--- a/website/thunderbird/115.0/holidayeoy/index.html
+++ b/website/thunderbird/115.0/holidayeoy/index.html
@@ -47,7 +47,7 @@
 
 {% block content %}
 <section class="letter-container font-xl">
-    <a href="{{ donate_url(content='cta', campaign='holiday_eoy_appeal_2023', source='thunderbird-client') }}" class="donate-banner" -data-donate-btn>
+    <a href="{{ donate_url(content='cta', campaign='holiday_eoy_appeal_2023', source='thunderbird-client') }}" class="donate-banner" data-donate-btn>
       <div id="donate-banner-left">
         {{ _('Click here to <strong class="block">Donate!</strong>') }}
       </div>
